apps/nginx/base/service-preview.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-preview
spec:
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
