apps/nginx/base/destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: nginx
spec:
  host: nginx
  subsets:
  - name: stable
    labels:
      app: nginx
  - name: canary
    labels:
      app: nginx
